syntax="proto3";

package space.exploration.mars.rover;

message InstructionPayload{
	int64 timeStamp = 1;
	bool SOS = 2;
	string roverModule = 3;
	bytes payload = 4;
}